trunk/Archive2/4d/b970029d85068f/output
In file included from main.cpp:1:
In file included from /usr/local/include/boost/bind.hpp:22:
In file included from /usr/local/include/boost/bind/bind.hpp:24:
In file included from /usr/local/include/boost/config.hpp:40:
In file included from /usr/local/include/boost/config/select_stdlib_config.hpp:18:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/cstddef:51:11: error: no member named 'max_align_t' in the global namespace
  using ::max_align_t;
        ~~^
1 error generated.
